Fix alignment of string parameters in settings dialog

--- a/html/css/pedals.css
+++ b/html/css/pedals.css
@@ -546,7 +546,7 @@ body > .mod-settings.mod-window-visible {
     margin:0 2px 2px 0;
     position:relative;
     text-align:center;
-    width:320px !important;
+    width:322px !important;
 }
 .mod-pedal-settings .mod-string > span.mod-string-title {
     color:white;
